--- a/parking.html
+++ b/parking.html
@@ -18,7 +18,7 @@
     <div class='section' id='parking'>
       <h1>Getting Here</h1>
       <div class='image'>
-        <img src="images/tcat.gif"></img>
+        <img src="images/tcat.jpg" alt='tcat bus logo'></img> <!-- image from http://pawprint.cornell.edu/?q=node/2192 -->
       </div>
       <p><b>Local Public Transportation:</b> The TCAT bus runs throughout the day
         from various locations in Ithaca. There are two bus stops in the Commons:
@@ -26,6 +26,9 @@
         <a href="https://tcat.nextinsight.com/">TCAT Trip Planner</a> to find the
         route and time that works best for you.</p>
       <p>The fare is $1.50 per person.</p>
+      <div class='image'>
+        <img src='images/tcat2.jpg' alt='tcat bus picture'> <!-- http://www.drydensouth.com/images/Dryden/Transportation/TCAT_Bus.jpg -->
+      </div>
     </div>
   </body>
 </html>
