--- a/dining.html
+++ b/dining.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Room and Dining - Apple Harvest Festival</title>
+    <title>Dining - Apple Harvest Festival</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </head>
   <body>
-    <div id='intro'>
+    <div class='intro'>
       <h3>Want some recommendations for great restaurants nearby? Check out
         some of our top picks:
       </h3>
